[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Starlette-Plus"
authors = [{ name = "PythonistaGuild" }]
dynamic = ["dependencies", "version"]
description = "Additional features, utilities and helpers for Starlette."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://github.com/PythonistaGuild/StarlettePlus"

[tool.setuptools]
packages = ["starlette_plus", "starlette_plus.types_", "starlette_plus.middleware"]

[tool.setuptools.package-data]
starlette_plus = ["py.typed"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
docs = ["mkdocs-material", "mkdocstrings-python", "mkdocstrings"]
dev = ["ruff", "pyright", "isort"]

[tool.ruff]
line-length = 120
indent-width = 4
exclude = ["venv"]


[tool.ruff.lint]
select = [
    "C4",
    "E",
    "F",
    "G",
    "I",
    "PTH",
    "RUF",
    "SIM",
    "TCH",
    "UP",
    "W",
    "PERF",
    "ANN",
]
ignore = [
    "F402",
    "F403",
    "F405",
    "PERF203",
    "RUF001",
    "RUF009",
    "SIM105",
    "UP034",
    "UP038",
    "ANN101",
    "ANN102",
    "ANN401",
    "UP031",
    "PTH123",
    "E203", 
    "E501",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = true
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
exclude = ["venv", "examples/"]
useLibraryCodeForTypes = true
typeCheckingMode = "strict"
reportImportCycles = false
reportPrivateUsage = false
pythonVersion = "3.11"